; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/kernel32/wine/extr_profile.c_PROFILE_ReleaseFile.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/kernel32/wine/extr_profile.c_PROFILE_ReleaseFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32*, i32*, i32 }

@CurProfile = common dso_local global %struct.TYPE_2__* null, align 8
@FALSE = common dso_local global i32 0, align 4
@ENCODING_ANSI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @PROFILE_ReleaseFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PROFILE_ReleaseFile() #0 {
  %1 = call i32 (...) @PROFILE_FlushFile()
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurProfile, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 3
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @PROFILE_Free(i32* %4)
  %6 = call i32 (...) @GetProcessHeap()
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurProfile, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 2
  %9 = load i32*, i32** %8, align 8
  %10 = call i32 @HeapFree(i32 %6, i32 0, i32* %9)
  %11 = load i32, i32* @FALSE, align 4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurProfile, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 4
  store i32 %11, i32* %13, align 8
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurProfile, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 3
  store i32* null, i32** %15, align 8
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurProfile, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 2
  store i32* null, i32** %17, align 8
  %18 = load i32, i32* @ENCODING_ANSI, align 4
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurProfile, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CurProfile, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = call i32 @ZeroMemory(i32* %22, i32 4)
  ret void
}

declare dso_local i32 @PROFILE_FlushFile(...) #1

declare dso_local i32 @PROFILE_Free(i32*) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @ZeroMemory(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
